--- a/Meses/Abril/index.html
+++ b/Meses/Abril/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de ejemplo</title>
+    <title>MAYA EN 2025</title>
 
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="styles.css">
@@ -33,7 +33,7 @@
                  <br><br>
                 Comimos bastaaaante en Semana Santa, hicimos buñuelos, una poquita cantidad de 180 BUÑUELOS santo Jesús jajajaja. Hicimos la torta de yuca, estaba bastante rica, distinta pero rica. También hicimos una chicha y una sopa, falto fue hacer el pescado frito jejejeje.
                 <video width="360" height="640" controls>
-                <source src="ImagenesA/abril7.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Abril/ImagenesA/abril7.mp4" type="video/mp4">
                 </video> 
                 <br><br>
                 Y llego el día... un 30 de abril que amanecio y me dijiste ''ya vamos para el hospital''. Ese día nacio Amanda y la vida cambio para mucho mejor. Me recuerdo esos días, con la ansiedad y todo, y cuando llego el momento y yo en la oficina y tu en el hospital, quería tanto ir pero no me dio chance jajajaja.
