--- a/Meses/Agosto/index.html
+++ b/Meses/Agosto/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de ejemplo</title>
+    <title>MAYA EN 2025</title>
 
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="styles.css">
@@ -30,10 +30,10 @@
                 <img src="ImagenesA\agosto21.jpg" alt="Foto">
                 <img src="ImagenesA\agosto20.jpg" alt="Foto">
                 <video width="360" height="640" controls>
-                <source src="ImagenesA/agosto2.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Agosto/ImagenesA/agosto2.mp4" type="video/mp4">
                 </video> 
                 <video width="360" height="640" controls>
-                <source src="ImagenesA/agosto17.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Agosto/ImagenesA/agosto17.mp4" type="video/mp4">
                 </video> 
                 <img src="ImagenesA\agosto18.jpg" alt="Foto">
                 <img src="ImagenesA\agosto19.jpg" alt="Foto">
@@ -60,10 +60,10 @@
                 <img src="ImagenesA\agosto24.jpg" alt="Foto">
                 <img src="ImagenesA\agosto10.jpg" alt="Foto">
                 <video width="360" height="640" controls>
-                <source src="ImagenesA/agosto15.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Agosto/ImagenesA/agosto15.mp4" type="video/mp4">
                 </video> 
                 <video width="360" height="640" controls>
-                <source src="ImagenesA/agosto16.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Agosto/ImagenesA/agosto16.mp4" type="video/mp4">
                 </video> 
             </p>
         </div>
