--- a/Meses/Febrero/index.html
+++ b/Meses/Febrero/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de ejemplo</title>
+    <title>MAYA EN 2025</title>
 
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="styles.css">
@@ -32,10 +32,10 @@
                 <img src="ImagenesF\feb1.jpg" alt="Comidita">
                 <img src="ImagenesF\feb2.jpg" alt="Comidita">
                 <video width="360" height="640" controls>
-                <source src="ImagenesF/feb7.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Febrero/ImagenesF/feb7.mp4" type="video/mp4">
                 </video>
                 <video width="360" height="640" controls>
-                <source src="ImagenesF/feb8.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Febrero/ImagenesF/feb8.mp4" type="video/mp4">
                 </video> 
                 <br>
                 El 14 de Febrero fue un día muy bonito y especial. Fue uno de mis días favoritos del año, un día que nos demostramos un amor inmenso y especial. Me sorprendiste con un regalo hermoso, inesperado, que me lleno de amor en cada celula de mi cuerpo, soy el hombre más afortunado y bendecido por tenerte a mi lado. Como siempre mi regalo tu lo 'escogiste' jajajaja indirectamente al menos.
@@ -45,7 +45,7 @@
                 Este mes también comimos bastante rico, en tu casa nos comimos unas Pizzas de pan que tu hiciste que quedaron ufff divinas, y tambien unas cachapas con cochino de Cachapisima que estaban divinas. Muy buenas cachapas, tambien debe repetirse jajajaja.
                 <img src="ImagenesF\feb9.jpg" alt="Comidita">
                 <video width="360" height="640" controls>
-                <source src="ImagenesF/feb6.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Febrero/ImagenesF/feb6.mp4" type="video/mp4">
                 </video>       
                 También fuimos al bautizo de Mateo, y aunque ese día te molestaste conmigo por una mala cara que tenía jsjsjs si disfrutamos bastante el día, te veías hermosa ese día demasiado demasiado, y grabamos unos vídeos que son un cague de risa, el de arriba es el mejor de todos jajajaja.
                 Este mes estuvo cargado la verdad, hubieron momentos dificiles, momentos muy dificiles y noches de temor e incertidumbre, y gracias a Dios hubieron también días de felicidad, paz, y momentos donde pudimos agradecer y disfrutar de todo lo bueno.
