--- a/Meses/Julio/index.html
+++ b/Meses/Julio/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de ejemplo</title>
+    <title>MAYA EN 2025</title>
 
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="styles.css">
@@ -32,7 +32,7 @@
                 <img src="ImagenesJ\julio5.jpg" alt="Foto">
                 <img src="ImagenesJ\julio4.jpg" alt="Foto">
                 <video width="360" height="640" controls>
-                <source src="ImagenesJ/julio3.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Julio/ImagenesJ/julio3.mp4" type="video/mp4">
                 </video> 
                 <br> <br>
                 Y para finalizar el mes, una salidita a comer jejeje comimos un club house para ti, y una hamburguesa Diabla para mí, Is'may es mi a prueba de todo definitivamente........... que se repita.  
