--- a/Meses/Junio/index.html
+++ b/Meses/Junio/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de ejemplo</title>
+    <title>MAYA EN 2025</title>
 
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="styles.css">
@@ -25,7 +25,7 @@
             <p>
                 Empieza uno de los meses más esperados de todo el añoooooo. <br>
                 <video width="360" height="640" controls>
-                <source src="ImagenesJ/junio6.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Junio/ImagenesJ/junio6.mp4" type="video/mp4">
                 </video>  
                  <br>
                 <img src="ImagenesJ\junio3.jpg" alt="Foto">
