--- a/Meses/Mayo/index.html
+++ b/Meses/Mayo/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de ejemplo</title>
+    <title>MAYA EN 2025</title>
 
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="styles.css">
@@ -28,19 +28,19 @@
                 <img src="ImagenesMy\mayo4.jpg" alt="Foto">
                 <img src="ImagenesMy\mayo5.jpg" alt="Foto">
                 <video width="360" height="640" controls>
-                <source src="ImagenesMy/mayo1.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Mayo/ImagenesMy/mayo1.mp4" type="video/mp4">
                 </video> 
                 <video width="360" height="640" controls>
-                <source src="ImagenesMy/mayo3.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Mayo/ImagenesMy/mayo3.mp4" type="video/mp4">
                 </video> 
                  <br>
                  <br>
                 Recuerdo ese día que hicimos los vídeos jajajaj sin darme cuenta fue la primera vez que edite un vídeo, bastante complejo la verdad, y considero que nos quedo hermoso todo, aunque no hubo reconocimiento.
                 <video width="360" height="640" controls>
-                <source src="ImagenesMy/mayo7.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Mayo/ImagenesMy/mayo7.mp4" type="video/mp4">
                 </video> 
                 <video width="360" height="640" controls>
-                <source src="ImagenesMy/mayo8+.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Mayo/ImagenesMy/mayo8+.mp4" type="video/mp4">
                 </video> 
                 <br>
                 Me da risa que tu ese mes hiciste mucho, estuviste pendiente de la niña, cosiste dos vestidos con tu maquina, que ya empezaba a presentar fallas, planeaste los siguientes cumplemes, también la oficina, los ayudabas en los quehaceres de la niña y las visitas al médico, y yo bueno.......... hice un yogurt.
