--- a/Meses/Noviembre/index.html
+++ b/Meses/Noviembre/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de ejemplo</title>
+    <title>MAYA EN 2025</title>
 
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="styles.css">
@@ -26,10 +26,10 @@
                 <img src="ImagenesN\noviembre.jpg" alt="Foto">
                 Este mes no salimos demasiado peeeero si vimos mucho MUCHO Barbie jajajaja nos terminamos viendo casi que todas las peliculas buenas de Barbie, creo que nos fatltaron unas cuantas. Aunque pienses que no me gustan y pese a mis renuencias iniciales, la verdad es que hubieron muy buenas películas, y pasar el tiempo contigo siempre es y fue un placer total.<br>
                 <video width="360" height="640" controls>
-                <source src="ImagenesN/noviembre.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Noviembre/ImagenesN/noviembre.mp4" type="video/mp4">
                 </video>
                 <video width="360" height="640" controls>
-                <source src="ImagenesN/noviembre6.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Noviembre/ImagenesN/noviembre6.mp4" type="video/mp4">
                 </video>
                  <br>
 				Lo que si hicimos este mes fueron dates de juegos, jugamos con unas papas al juego ese de las bombas jajajaja yyyy también tratamos de pasarnos Fire and Water, el juego flash. Tenía sus níveles complicadisimos y llegamos como a un 80% del juego, deberíamos algún día terminarlo.
