--- a/Meses/Septiembre/index.html
+++ b/Meses/Septiembre/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de ejemplo</title>
+    <title>MAYA EN 2025</title>
 
     <!-- Enlace al CSS externo -->
     <link rel="stylesheet" href="styles.css">
@@ -26,7 +26,7 @@
                 En Septiembre estabamos agarrando el hilo de lo que era San Felipe después de lo maravilloso que fue la Colonia Tovar jajajaja yyyy nos pusimos manos a la obra con el cumpleaños de Gixsell y un para nada ambicioso plan: hacer 100 cotillones de abejita cortados y cosidos uno por uno, además de una piñata personalizada. Todo hecho con nuestras propias manos. Nada ambicioso. Eso sí, muy hermoso quedo todo. <br>
                  <img src="ImagenesS\septiembre4.jpg" alt="Foto con mi Abuela">
                 <video width="360" height="640" controls>
-                <source src="ImagenesS/septiembre3.mp4" type="video/mp4">
+                <source src="https://media.githubusercontent.com/media/Maulrriche/2025Mata/master/Meses/Septiembre/ImagenesS/septiembre3.mp4" type="video/mp4">
                 </video>
                  <br>
 				Al final no pudimos terminar todos los cotillones a tiempo por el problema de la maquina de coser, pero en general el trabajo quedo hermoso, y Gixsell y Genesis quedaron encantadas y muy agradecidas con tooooodo el resultado. Trabajamos bastante, en especial tú, y todo salio bien gracias a Dios
