--- a/Meses/Abril/index.html
+++ b/Meses/Abril/index.html
@@ -13,7 +13,7 @@
     <!-- Título superior -->
     <div class="header reveal">
         <img src="logoizq.png" alt="Logo izquierdo">
-        <h1>Marzo</h1>
+        <h1>Abril</h1>
         <img src="logoder.png" alt="Logo derecho">
     </div>
 
@@ -21,7 +21,7 @@
     <div class="main">
         <!-- Cuadro central -->
         <div class="content reveal">
-            <h2>Todo lo que ha sido Marzo para nosotros para nosotros</h2>
+            <h2>Todo lo que ha sido Abril para nosotros para nosotros</h2>
             <p><br>
                 Buenooooo, en Abril comimos bastante y disfrutamos la semana santa y ya........... naaaa mentira, obviamente llego el nacimiento de una princesa a tu familia, el nacimiento de Amanda, que llego para dar luz y alegría a todos y llenar de amor los corazones. <br>
                  <img src="ImagenesA\abril1.jpg" alt="Foto">
