--- a/Meses/Febrero/index.html
+++ b/Meses/Febrero/index.html
@@ -20,7 +20,7 @@
     <!-- Cuerpo de la página -->
     <div class="main">
         <!-- Cuadro central -->
-        <div class="content">
+        <div class="content reveal">
             <h2>Todo lo que ha sido Febrero para nosotros para nosotros</h2>
             <p>
                 Considero que este febrero fue quizás uno de los meses más movidos de todo el año jajajaja salimos a comer varias veces, el cumpleaños de Jeisshlyn, el de mi Ama, el 14 de Febrero, el bautizo de Mateo, el Cumpleaños de tu abuela. <br>
